--- a/menu/src/main/resources/public/style.css
+++ b/menu/src/main/resources/public/style.css
@@ -1,44 +1,69 @@
-.color-overlay h1 {
-  font-size: 6rem;
-  font-family: "Cookie";
-  padding: 20px;
-  margin: 15px;
-  z-index: 1;
-  opacity: 1.4;
+*,
+html,
+body {
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+    background-color: rgb(2, 48, 71);
+    color: rgb(234, 238, 241);
+}
 
+.nav {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-h1 {
-    text-align: center;
-}
-.section h2 {
-    position: relative;
-    color: black;
-    opacity: 1;
-    text-align: center;
-}
-.section {
-  position: relative;
-  top: 0;
-  left: 0;
-  background-color: #023047;
-  width: 100%;
-  height: 20vh;
-  opacity: 0.7;
-}
-body, html {
-  height: 100%;
-}
-.parallax {
-  /* The image used */
-  background-image: url("beach.jpg");
 
-  /* Full height */
-  height: 200%;
-  width: 100%;
+.nav a {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin: 0rem 1.25rem;
 
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    transition: all 0.2s;
+}
+
+.nav a:hover {
+    background-color: rgb(50, 50, 53);
+    color: rgb(234, 238, 241);
+}
+
+.jumbotron {
+    width: 100%;
+    min-height: 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.jumbotron * {
+    margin: 0.75rem 0rem;
+}
+
+.jumbotron h1 {
+    font-weight: 700;
+    font-size: 6rem;
+    color: rgb(255, 183, 3);
+}
+
+.jumbotron p {
+    font-weight: 400;
+    font-size: 1.25rem;
+    text-align: justify;
+    line-height: 1.5rem;
+    color: rgb(127, 160, 176);
+}
+
+.container {
+    width: 55vw;
+    margin: 0 auto;
+}
+
+b {
+    font-weight: bold;
 }
