--- a/menu/src/main/resources/public/weather.css
+++ b/menu/src/main/resources/public/weather.css
@@ -1,47 +1,78 @@
-.navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
+*,
+html,
 
-    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 450px}
+.sidebar {
+background-color: rgb(2, 48, 71);
+    color: rgb(234, 238, 241);
+}
+body {
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+    background-color: rgb(2, 48, 71);
+    color: rgb(234, 238, 241);
+}
 
-    /* Set gray background color and 100% height */
-    .sidenav {
-      padding-top: 20px;
-      background-color: #219EBC;
-      height: 100%;
-    }
+.nav {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #023047;
-      color: white;
-      padding: 15px;
-    }
+.nav a {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin: 0rem 1.25rem;
 
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;}
-    }
-    h1 {
-        text-align: center;
-        color: white;
-    }
-    p {
-        color: white;
-    }
+    transition: all 0.2s;
+}
 
-    .text-left {
-        background-color: #023047;
-    }
-    .row content {
-        background-color: #023047;
-    }
-    .myNavbar {
-        color: white;
-    }
+.nav a:hover {
+    background-color: rgb(50, 50, 53);
+    color: rgb(234, 238, 241);
+}
+
+.jumbotron {
+    width: 100%;
+    min-height: 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.jumbotron * {
+    margin: 0.75rem 0rem;
+}
+
+.jumbotron h1 {
+    font-weight: 700;
+    font-size: 6rem;
+    color: rgb(255, 183, 3);
+}
+
+.jumbotron p {
+    font-weight: 400;
+    font-size: 1.25rem;
+    text-align: justify;
+    line-height: 1.5rem;
+    color: rgb(127, 160, 176);
+}
+
+.container {
+    width: 55vw;
+    margin: 0 auto;
+    background-color: rgb(2, 48, 71);
+        color: rgb(234, 238, 241);
+}
+
+b {
+    font-weight: bold;
+    background-color: rgb(2, 48, 71);
+        color: rgb(234, 238, 241);
+}
