fixed index and weather html files

--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nautilus</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="main-content">
@@ -25,7 +25,7 @@
                     <h2>01</h2>
                     <h3>Weather</h3>
                     <p>The weather app tell you the temperature in your selected area, the weather type, chance of rain, and forecasts the weather for the next couple of days.<br><br> </p>
-                    <a href="./weather.html" target="_blank">Run</a>
+                    <a href="./weather" target="_blank">Run</a>
                 </div>
             </div>
         </div>
