Added link for stock.html

--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -57,9 +57,9 @@
             <div class="box">
                 <div class="content">
                     <h2>04</h2>
-                    <h3>com.stocks.Stocks</h3>
+                    <h3>Stocks</h3>
                     <p>The stock app allows users to get an overview of the stock trends for the day and what are the most trending stocks for the day. <br><br><br></p>
-                    <a href="#" target="_blank">Run</a>
+                    <a href="./stock" target="_blank">Run</a>
                 </div>
             </div>
         </div>
