--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                     <h2>01</h2>
                     <h3>Weather</h3>
                     <p>The weather app tell you the temperature in your selected area, the weather type, chance of rain, and forecasts the weather for the next couple of days.<br><br> </p>
-                    <a href="./weather" target="_blank">Run</a>
+                    <a href="./weather">Run</a>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
                     <h2>02</h2>
                     <h3>ToDo List</h3>
                     <p>The ToDo list app allows users to create new ToDo lists, add items to it, check them off, and more. It tells the users what they have to do based on Calendar and Canvas integration.</p>
-                    <a href="#" target="_blank">Run</a>
+                    <a href="#">Run</a>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                     <h2>03</h2>
                     <h3>Calendar</h3>
                     <p>The calendar app allows users to link their Google Calendar and be able to see what events are on their calendar. It will display even name, date, time, and more notes.</p>
-                    <a href="#" target="_blank">Run</a>
+                    <a href="#">Run</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     <h2>04</h2>
                     <h3>Stocks</h3>
                     <p>The stock app allows users to get an overview of the stock trends for the day and what are the most trending stocks for the day. <br><br><br></p>
-                    <a href="./stock" target="_blank">Run</a>
+                    <a href="./stock">Run</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                     <h2>05</h2>
                     <h3>News Briefing</h3>
                     <p>The news briefing app allows users to get a list of top trending articles in the morning so that the user is caught up on world events and major events. <br> <br></p>
-                    <a href="#" target="_blank">Run</a>
+                    <a href="#">Run</a>
                 </div>
             </div>
         </div>
