Test 1 for Front End of Calendar

--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
                     <h2>03</h2>
                     <h3>Calendar</h3>
                     <p>The calendar app allows users to link their Google Calendar and be able to see what events are on their calendar. It will display even name, date, time, and more notes.</p>
-                    <a href="#" target="_blank">Run</a>
+                    <a href="./calendar" target="_blank">Run</a>
                 </div>
             </div>
         </div>
