--- a/menu/src/main/resources/templates/weather.html
+++ b/menu/src/main/resources/templates/weather.html
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-<img src="Nautilus.png" alt = "Nautilus" style="width:50px;height:50px;">
+<!--<img src="Nautilus.png" alt = "Nautilus" style="width:50px;height:50px;">-->
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
