--- a/menu/src/main/resources/templates/calendar.html
+++ b/menu/src/main/resources/templates/calendar.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>Calendar</title>
 </head>
 <body>
+
+<div class="container-fluid text-center">
+    <div class="row content">
+        <div class="col-sm-2 sidenav">
+            <p><a href="#"></a></p>
+            <p><a href="#"></a></p>
+            <p><a href="#"></a></p>
+        </div>
+        <div class="col-sm-8 text-left">
+                <div class="test">
+                    <p th:text = "'Event Summary: ' + ${Events.eventSummary}"></p>
+                    <p th:text ="'Your event starts at: ' + ${Events.eventStart}"></p>
+                    <p th:text ="'Your even is at: ' + ${Events.eventLocation}"></p>
+                </div>
+        </div>
+        <div class="col-sm-2 sidenav">
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
