--- a/menu/src/main/resources/static/css/weather.css
+++ b/menu/src/main/resources/static/css/weather.css
@@ -1,20 +1,26 @@
-*,
-html,
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+*
+{
+    margin: 0;
+    padding: 0;
+    box--sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    background: #232427;
+}
 
 .sidebar {
-background-color: rgb(2, 48, 71);
+    background-color: rgb(2, 48, 71);
     color: rgb(234, 238, 241);
 }
 body {
     font-family: 'Inter', sans-serif;
     box-sizing: border-box;
-    background-color: rgb(2, 48, 71);
-    color: rgb(234, 238, 241);
+    background: #232427;
 }
 
 .nav {
     width: 100%;
-    height: 4rem;
+    height: 2.1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,12 +28,13 @@ body {
 
 .nav a {
     text-transform: uppercase;
-    font-size: 0.8rem;
+    font-size: 2rem;
     font-weight: 600;
     cursor: pointer;
     border-radius: 0.25rem;
-    padding: 0.5rem;
-    margin: 0rem 1.25rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    margin: 1.25rem 1.25rem;
 
     transition: all 0.2s;
 }
@@ -39,7 +46,7 @@ body {
 
 .jumbotron {
     width: 100%;
-    min-height: 15rem;
+    min-height: 20rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,11 +75,85 @@ body {
     width: 55vw;
     margin: 0 auto;
     background-color: rgb(2, 48, 71);
-        color: rgb(234, 238, 241);
+    /*        color: rgb(234, 238, 241);*/
 }
 
 b {
     font-weight: bold;
     background-color: rgb(2, 48, 71);
-        color: rgb(234, 238, 241);
+    /*        color: rgb(234, 238, 241);*/
+}
+
+label {
+    color: white;
+}
+
+
+.test {
+    font-color: white;
+}
+
+input {
+    background-color: #ffffff;
+}
+
+.inputField {
+    display: inline-block;
+    color: black;
+    font-size: 20px;
+    padding: 5px;
+}
+
+li {
+    padding-top: 25px;
+}
+
+.inputText {
+    font-size: 20px;
+}
+
+.test {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    position: sticky;
+    color: white;
+}
+
+ul.test, ul.test ul {
+    list-style: none;
+    margin: 0;
+    /*    padding: 10px;*/
+    padding-bottom: 20px;
+}
+
+ul.test p {
+    margin: 0;
+    padding: 7px 7px;
+    line-height: 20px;
+    color: white;
+    font-weight: bold;
+    border-left:1px solid rgb(100,100,100);
+
+}
+ul.test p:last-child {
+    border-left:none;
+}
+ul.test p:before {
+    position:relative;
+    top:-0.3em;
+    height:2em;
+    width:12px;
+    color:white;
+    border-bottom:1px solid rgb(100,100,100);
+    content:"";
+    display:inline-block;
+    left:-7px;
+}
+ul.test p:last-child:before {
+    border-left:1px solid rgb(100,100,100);
+}
+
+p {
+    color: white;
+    padding: 10px;
 }
