--- a/menu/src/main/resources/templates/weather.html
+++ b/menu/src/main/resources/templates/weather.html
@@ -7,55 +7,41 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link rel ="stylesheet" href="css/weather.css">
+  <link rel ="stylesheet" href="weather.css">
 </head>
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-<!--<img src="Nautilus.png" alt = "Nautilus" style="width:50px;height:50px;">-->
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a hre f="#./index">Nautilus Home</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-      </ul>
+
     </div>
   </div>
 </nav>
 
 <div class="container-fluid text-center">
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-    </div>
+  <div class="row-content">
     <div class="col-sm-8 text-left">
       <form action="/weather" method="GET" id="weatherForm">
-        <label for="weatherField">Enter the City</label>
-        <input name="location" id="weatherField" type="text">
-        <button>Go!</button>
-        <p th:text = "'Location: ' + ${location}"></p>
-        <p th:text ="'The Temperature Feels Like: ' + ${feels_temp}"></p>
-        <p th:text ="'The Forecast is: ' +${forecast}"></p>
-        <p th:text ="'The Max Temperature is: ' +${max_temp}"></p>
-        <p th:text ="'The Min Temperature is: ' +${min_temp}"></p>
-        <p th:text ="'The Time of Sunrise is: ' +${sunrise}"></p>
-        <p th:text ="'The Time of Sunset is: ' +${sunset}"></p>
+        <label for="weatherField" class="inputText"> Enter the City: </label>
+        <input name="location" id="weatherField" type="text" class="inputField">
+
+
+        <ul class="test">
+          <p th:text = "'Location: ' + ${location}">Test text</p>
+          <p th:text ="'The Temperature Feels Like: ' + ${feels_temp}">Test text</p>
+          <p th:text ="'The Forecast is: ' +${forecast}">Test text</p>
+          <p th:text ="'The Max Temperature is: ' +${max_temp}">Test text</p>
+          <p th:text ="'The Min Temperature is: ' +${min_temp}">Test text</p>
+          <p th:text ="'The Time of Sunrise is: ' +${sunrise}">Test text</p>
+          <p th:text ="'The Time of Sunset is: ' +${sunset}">Test text</p>
+        </ul>
       </form>
     </div>
-    <div class="col-sm-2 sidenav">
-    </div>
+
+
   </div>
 </div>
 
