--- a/menu/src/main/resources/templates/stock.html
+++ b/menu/src/main/resources/templates/stock.html
@@ -41,21 +41,28 @@
             <p><a href="#"></a></p>
         </div>
         <div class="col-sm-8 text-left">
-            <form action="/weather" method="GET" id="weatherForm">
-                <label for="weatherField">Enter the City</label>
-                <input name="location" id="weatherField" type="text">
-                <button>Go!</button>
-                <p th:text = "'Ticker: ' + ${ticker}"></p>
-                <p th:text ="'Current Price: ' + ${openStock}"></p>
-                <p th:text ="'Closed Price: ' +${closedStock}"></p>
-                <p th:text ="'Stock Price High: ' +${stockHi}"></p>
-                <p th:text ="'Stock Price Low: ' +${stockLo}"></p>
-                <p th:text ="'Previous Open Price: ' +${prevOpenStock}"></p>
-                <p th:text ="'Previous Close Price: ' +${prevClosedStock}"></p>
-                <p th:text ="'Previous Stock Price High ' +${prevStockHi}"></p>
-                <p th:text ="'Previous Stock Price Low ' +${prevStockLo}"></p>
-                <p th:text ="'Stock Percent Gain: ' +${percentGain}"></p>
-            </form>
+            <div class="row-content">
+                <div class="col-sm-8 text-left">
+                    <form action="/stock" method="GET" id="stockForm">
+                        <label for="stockField" class="inputText"> Enter the City: </label>
+                        <input name="ticker" id="stockField" type="text" class="inputField">
+
+
+                        <ul class="test">
+                            <p th:text = "'Ticker: ' + ${ticker}"></p>
+                            <p th:text ="'Current Price: ' + ${openStock}"></p>
+                            <p th:text ="'Closed Price: ' +${closedStock}"></p>
+                            <p th:text ="'Stock Price High: ' +${stockHi}"></p>
+                            <p th:text ="'Stock Price Low: ' +${stockLo}"></p>
+                            <p th:text ="'Previous Open Price: ' +${prevOpenStock}"></p>
+                            <p th:text ="'Previous Close Price: ' +${prevClosedStock}"></p>
+                            <p th:text ="'Previous Stock Price High ' +${prevStockHi}"></p>
+                            <p th:text ="'Previous Stock Price Low ' +${prevStockLo}"></p>
+                            <p th:text ="'Stock Percent Gain: ' +${percentGain}"></p>
+                        </ul>
+                    </form>
+                </div>
+
         </div>
         <div class="col-sm-2 sidenav">
         </div>
