--- a/menu/src/main/resources/templates/weather.html
+++ b/menu/src/main/resources/templates/weather.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel ="stylesheet" href="weather.css">
+  <link rel ="stylesheet" href="css/weather.css">
 </head>
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a hre f="#./index">Nautilus Home</a></li>
+        <li class="active"><a href="/">Nautilus Home</a></li>
       </ul>
 
     </div>
