--- a/menu/src/main/resources/templates/calendar.html
+++ b/menu/src/main/resources/templates/calendar.html
@@ -9,8 +9,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Calendar</title>
 </head>
-<body>
 
+<body>
 <div class="container-fluid text-center">
     <div class="row content">
         <div class="col-sm-2 sidenav">
@@ -20,9 +20,11 @@
         </div>
         <div class="col-sm-8 text-left">
                 <div class="test">
-                    <p th:text ="'Event Summary: ' + ${Events.eventSummary}"></p>
-                    <p th:text ="'Your event starts at: ' + ${Events.eventStart}"></p>
-                    <p th:text ="'Your even is at: ' + ${Events.eventLocation}"></p>
+                    <div th:each="Event : ${Events}">
+                        Event Summary: <p th:text="${Events.eventSummary}"></p>
+                        Event starts at: <p th:text ="${Events.eventStart}"></p>
+                        Event is at: <p th:text ="${Events.eventLocation}"></p>
+                    </div>
                 </div>
         </div>
         <div class="col-sm-2 sidenav">
