Working on date function for stock

--- a/menu/src/main/resources/templates/stock.html
+++ b/menu/src/main/resources/templates/stock.html
@@ -44,7 +44,7 @@
             <div class="row-content">
                 <div class="col-sm-8 text-left">
                     <form action="/stock" method="GET" id="stockForm">
-                        <label for="stockField" class="inputText"> Enter the City: </label>
+                        <label for="stockField" class="inputText"> Enter the ticker: </label>
                         <input name="ticker" id="stockField" type="text" class="inputField">
 
 
