--- a/menu/src/main/resources/static/css/weather.css
+++ b/menu/src/main/resources/static/css/weather.css
@@ -3,7 +3,7 @@
 {
     margin: 0;
     padding: 0;
-    box--sizing: border-box;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     background: #232427;
 }
@@ -90,7 +90,7 @@ label {
 
 
 .test {
-    font-color: white;
+   color: white;
 }
 
 input {
@@ -161,7 +161,7 @@ p {
 .cardsContainer {
     display: flex;
     justify-content: left;
-    align_items: center;
+    align-content: center;
     flex-wrap: wrap;
     max-width: 100%;
     margin: 0px 0px;
@@ -185,7 +185,7 @@ p {
     left: 20px;
     right: 20px;
     bottom: 20px;
-    background: #2a2b2f;
+    background: #232427;
 /*    border: 2px solid #1e1f23;
     box-shadow: 0 20px 50px rgba(0,0,0,0.5);*/
     transition: 0.5s;
