added news link

--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -70,7 +70,7 @@
                     <h2>05</h2>
                     <h3>News Briefing</h3>
                     <p>The news briefing app allows users to get a list of top trending articles in the morning so that the user is caught up on world events and major events. <br> <br></p>
-                    <a href="#">Run</a>
+                    <a href="./news">Run</a>
                 </div>
             </div>
         </div>
