added base html page for news

--- a/menu/src/main/resources/templates/news.html
+++ b/menu/src/main/resources/templates/news.html
@@ -7,20 +7,129 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/weather.css">
     <title>News</title>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="./">Nautilus Home</a></li>
-            </ul>
-
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article1}">
+                <p th:text="${article}"></p>
+            </div>
         </div>
     </div>
-</nav>
 
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article2}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article3}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article4}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article5}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article6}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article7}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article8}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article9}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article10}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article11}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article12}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article13}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article14}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-8 text-left">
+        <div class="test">
+            <div th:each="article : ${article15}">
+                <p th:text="${article}"></p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
