--- a/menu/src/main/resources/static/css/main.css
+++ b/menu/src/main/resources/static/css/main.css
@@ -77,7 +77,7 @@ body {
     justify-content: center;
     align_items: center;
     flex-wrap: wrap;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 40px 0;
 
 }
