--- a/menu/src/main/resources/templates/calendar.html
+++ b/menu/src/main/resources/templates/calendar.html
@@ -20,15 +20,12 @@
         </div>
         <div class="col-sm-8 text-left">
                 <div class="test">
-                    <div th:each="summary : ${summaries}">
-                        <p th:text="${summary}"></p>
-                    </div>
-                    <div th:each="datetime : ${datetimes}">
-                        <p th:text="${datetime}"></p>
-                    </div>
-                    <div th:each="location : ${locations}">
-                        <p th:text="${location}"></p>
-                    </div>
+                    <div th:each="event : ${eventsarray}">
+                        <p th:text="${event.summary}"></p>
+                        <p th:text="${event.date}"></p>
+                        <p th:text="${event.location}"></p>
+                    <div>
+
                 </div>
         </div>
         <div class="col-sm-2 sidenav">
