html template for news

--- a/menu/src/main/resources/templates/news.html
+++ b/menu/src/main/resources/templates/news.html
@@ -13,9 +13,14 @@
 <body>
     <div class="col-sm-8 text-left">
         <div class="test">
-            <div th:each="article : ${article1}">
-                <p th:text="${article}"></p>
-            </div>
+            <li th:text="${article1[0]}"></li>
+            <li th:text="${article1[1]}"></li>
+            <li th:text="${article1[2]}"></li>
+            <li th:text="${article1[3]}"></li>
+            <img th:src="${article1[4]}">
+<!--            <li th:text="${article1[4]}"></li>-->
+            <li th:text="${article1[5]}"></li>
+            <li th:text="${article1[6]}"></li>
         </div>
     </div>
 
@@ -27,109 +32,109 @@
         </div>
     </div>
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article3}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article3}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article4}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article4}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article5}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article5}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article6}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article6}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article7}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article7}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article8}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article8}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article9}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article9}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article10}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article10}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article11}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article11}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article12}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article12}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article13}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article13}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article14}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article14}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="col-sm-8 text-left">
-        <div class="test">
-            <div th:each="article : ${article15}">
-                <p th:text="${article}"></p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="col-sm-8 text-left">-->
+<!--        <div class="test">-->
+<!--            <div th:each="article : ${article15}">-->
+<!--                <p th:text="${article}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 </body>
 </html>
