--- a/menu/src/main/resources/templates/calendar.html
+++ b/menu/src/main/resources/templates/calendar.html
@@ -24,8 +24,7 @@
                         <p th:text="${event.summary}"></p>
                         <p th:text="${event.date}"></p>
                         <p th:text="${event.location}"></p>
-                    <div>
-
+                    </div>
                 </div>
         </div>
         <div class="col-sm-2 sidenav">
