--- a/menu/src/main/resources/static/css/calendar.css
+++ b/menu/src/main/resources/static/css/calendar.css
@@ -4,33 +4,110 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    position: center;
 }
 
+.sidebar {
+    background-color: rgb(2, 48, 71);
+    color: rgb(234, 238, 241);
+}
 body {
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
     background: #232427;
+    position: center;
+}
+
+.nav {
+    width: 100%;
+    height: 2.1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0.5rem;
+}
+
+.nav a {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    margin: 1.25rem 1.25rem;
+
+    transition: all 0.2s;
+}
+
+.nav a:hover {
+    background-color: rgb(50, 50, 53);
+    color: rgb(234, 238, 241);
+}
+
+.jumbotron {
+    width: 100%;
+    min-height: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.jumbotron * {
+    margin: 0.75rem 0.75rem;
+}
+
+.jumbotron h1 {
+    font-weight: 700;
+    font-size: 6rem;
+    color: rgb(255, 183, 3);
+}
+
+.jumbotron p {
+    font-weight: 400;
+    font-size: 1.25rem;
+    text-align: justify;
+    line-height: 1.5rem;
+    color: rgb(127, 160, 176);
+}
+th {
+    color: #FB8500;
+    font-size: 2em;
+    padding: 10px;
+    border-bottom: 2px solid #FB8500;
+    text-align: center;
+    width: 1px;
+    white-space: nowrap;
+
+}
+
+td {
+    font-size: 1.5em;
+    width: 1px;
+    white-space: nowrap;
+    text-align: center;
     color: white;
 }
 
-/* Create three equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+table {
+/*    table-layout: fixed;*/
+    position: center;
 }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-    border-bottom: 1px solid black;
+table td {
+    border-left: 2px solid #FB8500;
+    padding:5px 5px 5px 5px; /* Only right padding*/
 }
 
-/*table {
-    width: 100%;
-}*/
+table td tr {
+    white-space: nowrap;
+}
 
-h1 {
-    color: #FB8500;
+table td:first-child {
+    border-left: none;
+}
+
+.row-content {
+    position: center;
 }
