--- a/menu/src/main/resources/templates/calendar.html
+++ b/menu/src/main/resources/templates/calendar.html
@@ -7,24 +7,37 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Calendar</title>
+    <link rel="stylesheet" href="css/calendar.css">
 </head>
 
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="./">Nautilus Home</a></li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
 <div class="container-fluid text-center">
     <div class="row content">
-        <div class="col-sm-2 sidenav">
-            <p><a href="#"></a></p>
-            <p><a href="#"></a></p>
-            <p><a href="#"></a></p>
-        </div>
         <div class="col-sm-8 text-left">
-                <div class="test">
-                    <div th:each="event : ${eventsarray}">
-                        <p th:text="${event.summary}"></p>
-                        <p th:text="${event.date}"></p>
-                        <p th:text="${event.location}"></p>
-                    </div>
-                </div>
+        <table>
+            <tr>
+                <th>Summary</th>
+                <th>Date & Time</th>
+                <th>Location</th>
+            </tr>
+            <tr th:each="event : ${eventsarray}">
+                <td th:text="${event.summary}"></td>
+                <td th:text="${event.date}"></td>
+                <td th:text="${event.location}"></td>
+            </tr>
+        </table>
+
         </div>
         <div class="col-sm-2 sidenav">
         </div>
