--- a/menu/src/main/resources/templates/stock.html
+++ b/menu/src/main/resources/templates/stock.html
@@ -7,56 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/vis.js"></script>
     <link rel ="stylesheet" href="css/weather.css">
 </head>
 <body>
-<style>
-    #chartdiv {
-        width: 100%;
-        height: 500px;
-        max-width: 100%;
-    }
-
-    #controls {
-        overflow: hidden;
-        padding-bottom: 3px;
-    }
-</style>
-
-<!-- Resources -->
-<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/plugins/rangeSelector.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-
-<!-- Chart code -->
-<style>
-    #chartdiv {
-        width: 100%;
-        height: 500px;
-        max-width: 100%;
-    }
-
-    #controls {
-        overflow: hidden;
-        padding-bottom: 3px;
-    }
-</style>
-
-<!-- Resources -->
-<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/plugins/rangeSelector.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-
-<!-- Chart code -->
-
-
-<!-- HTML -->
-
-
-<!-- HTML -->
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -93,27 +47,7 @@
                 <div class="col-sm-8 text-left">
                     <form action="/stock" method="GET" id="stockForm">
                         <label for="stockField" class="inputText"> Enter the ticker: </label>
-                        <input name="ticker" id="stockField" type="text" class="inputField" value="GME">
-
-                        <script>
-                            var ticker = document.getElementById("stockField").value;
-
-                            //  [object HTMLInputElement]
-                            var currentDate = new Date()
-                            var day = currentDate.getDate()
-                            var month = currentDate.getMonth() + 1
-                            var year = currentDate.getFullYear()
-                            var date = year + "-" + 0 + month + "-" + 0 + day;
-                            var prevdate = year + "-" + 0 + month + "-" + 0 + (day-7);
-                            ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "b55b025e438fa8a98e32482b5f768ff5"];
-                            zingchart.render({
-                                id: 'myChart',
-                                output: "svg",
-                                    "dataurl":  "https://api.polygon.io/v2/aggs/ticker/" + ticker + "/range/1/day/" + prevdate + "/" + date + "?apiKey=QSnjRpHBcP7QcFMp2XEhk4GG1EYlJ9X1";,
-                                height: "100%",
-                                width: "100%"
-                            });
-                        </script>
+                        <input name="ticker" id="stockField" type="text" class="inputField" value="">
 
                         <ul class="test">
                             <p th:text = "'Ticker: ' + ${ticker}"></p>
@@ -121,8 +55,90 @@
                             <p th:text ="'Closed Price: ' +${closedStock}"></p>
                             <p th:text ="'Stock Price High: ' +${stockHi}"></p>
                             <p th:text ="'Stock Price Low: ' +${stockLo}"></p>
-                            <div id='myChart'></div>
+                            <p th:text ="'Stock Price Low: ' +${openStock6}"></p>
+                            <p id="test"></p>
 
+
+
+
+                            <div id="visualization"></div>
+
+                            <script th:inline="javascript">
+                                var ticker = document.getElementById("stockField").value;
+
+                                //  [object HTMLInputElement]
+                                var currentDate = new Date()
+
+                                var day1 = currentDate.getDate()-7
+                                var day2 = currentDate.getDate()-6
+                                var day3 = currentDate.getDate()-5
+                                var day4 = currentDate.getDate()-4
+                                var day5 = currentDate.getDate()-3
+                                var day6 = currentDate.getDate()-2
+
+                                var stockopen1 = [[${openStock1}]];
+                                var stockclose1 = [[${closedStock1}]];
+                                var stockhi1 = [[${stockHi1}]];
+                                var stocklo1 = [[${stockLo1}]];
+
+                                var stockopen2 = [[${openStock2}]];
+                                var stockclose2 = [[${closedStock2}]];
+                                var stockhi2 = [[${stockHi2}]];
+                                var stocklo2 = [[${stockLo2}]];
+
+                                var stockopen3 = [[${openStock3}]];
+                                var stockclose3 = [[${closedStock3}]];
+                                var stockhi3 = [[${stockHi3}]];
+                                var stocklo3 = [[${stockLo3}]];
+
+                                var stockopen4 = [[${openStock4}]];
+                                var stockclose4 = [[${closedStock4}]];
+                                var stockhi4 = [[${stockHi4}]];
+                                var stocklo4 = [[${stockLo4}]];
+
+                                var stockopen5 = [[${openStock5}]];
+                                var stockclose5 = [[${closedStock5}]];
+                                var stockhi5 = [[${stockHi5}]];
+                                var stocklo5 = [[${stockLo5}]];
+
+                                var stockopen6 = [[${openStock6}]];
+                                var stockclose6 = [[${closedStock6}]];
+                                var stockhi6 = [[${stockHi6}]];
+                                var stocklo6 = [[${stockLo6}]];
+
+
+
+                                var month = currentDate.getMonth() + 1
+                                var month1 = month.toString()
+                                var year = currentDate.getFullYear()
+                                var date = year + "-" + "0" + month + "-" + "0" + day;
+                                var prevdate1 = year + "-" + "0" + month + "-" + "0" + (day1);
+                                var prevdate2 = year + "-" + "0" + month + "-" + "0" + (day2);
+                                var prevdate3 = year + "-" + "0" + month + "-" + "0" + (day3);
+                                var prevdate4 = year + "-" + "0" + month + "-" + "0" + (day4);
+                                var prevdate5 = year + "-" + "0" + month + "-" + "0" + (day5);
+                                var prevdate6 = year + "-" + "0" + month + "-" + "0" + (day6);
+
+                                document.getElementById("test").innerHTML = month1;
+
+                                var container = document.getElementById('visualization');
+                                var items = [
+                                    {x: prevdate1, y: stockopen1},
+                                    {x: prevdate2, y: stockopen2},
+                                    {x: prevdate3, y: stockopen3},
+                                    {x: prevdate4, y: stockopen4},
+                                    {x: prevdate5, y: stockopen5},
+                                    {x: prevdate6, y: stockopen6},
+                                ];
+
+                                var dataset = new vis.DataSet(items);
+                                var options = {
+                                    start: prevdate,
+                                    end: prevdate5
+                                };
+                                var Graph2d = new vis.Graph2d(container, dataset, options);
+
+                            </script>
                         </ul>
                     </form>
                 </div>
@@ -133,7 +149,7 @@
     </div>
 </div>
 
-
+</div>
 
 </body>
 </html>
