--- a/menu/src/main/resources/templates/index.html
+++ b/menu/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <!--<h1>Nautilus</h1>-->
         <span class="gradient-text">Nautilus</span>
         <h2>Welcome to Nautilus, your hub for productivity. Nautilus hopes to combine many of the apps you use today and create a hub where you can check the weather, stocks, make a ToDo list, and check your calendar, all in one place. </h2>
-        <!--<span class="gradient-desc">Welcome to Nautilus, your hub for productivity. Nautilus hopes to combine many of the apps you use today and create a hub where you can check the weather, stocks, make a ToDo list, and check your calendar, all in one place.</span>-->
+        <!--<span class="gradient-desc">Welcome to Nautilus, your hub for productivity. Nautilus hopes to combine many of the apps you use today and create a hub where you can check the weather, stocks, your calendar, all in one place.</span>-->
     </div>
 
     <div class=""></div>
